--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Street_Food_Go
+
+spring.datasource.url=jdbc:postgresql://dpg-d4cvfradbo4c73dhep2g-a.oregon-postgres.render.com:5432/db_ra04
+spring.datasource.username=db_ra04
+spring.datasource.password=bhnIZX0AsVZGhA2AtsswxXJo1YlD6ADt
