new Entities(to add more) new Controllers New Architecture with controller -> service -> repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Street_Food_Go
 
 spring.datasource.url=jdbc:postgresql://dpg-d4cvfradbo4c73dhep2g-a.oregon-postgres.render.com:5432/db_ra04
-spring.datasource.username=db_ra04
+spring.datasource.username=root
 spring.datasource.password=bhnIZX0AsVZGhA2AtsswxXJo1YlD6ADt
+
+
+spring.jpa.hibernate.ddl-auto=update
