added security credits to @pipakos. finized the order and more

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Street_Food_Go
 
-spring.datasource.url=jdbc:postgresql://dpg-d4cvfradbo4c73dhep2g-a.oregon-postgres.render.com:5432/db_ra04
-spring.datasource.username=root
-spring.datasource.password=bhnIZX0AsVZGhA2AtsswxXJo1YlD6ADt
+spring.datasource.url=jdbc:postgresql://dpg-d525vlngi27c73b8j2c0-a.oregon-postgres.render.com:5432/db_80ns
+spring.datasource.username=dbuser
+spring.datasource.password=IHLwxDrO3pE8Amkg9v2CD1pVdCm01P21
 
 
 spring.jpa.hibernate.ddl-auto=update
