--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.googlecode.libphonenumber</groupId>
+			<artifactId>libphonenumber</artifactId>
+			<version>9.0.18</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
