Etoima ta Rest Methods: GET/POST added JWT sxedo etoimi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=IHLwxDrO3pE8Amkg9v2CD1pVdCm01P21
 
 
 spring.jpa.hibernate.ddl-auto=update
+
+app.jwt.secret=MySuperSecretKeyForStreetFoodGoProject2025!MustBeVeryLong
+app.jwt.issuer=StreetFoodGoApp
+app.jwt.audience=StreetFoodGoUsers
+app.jwt.ttl-minutes=60
