--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=Street_Food_Go
 
-#spring.datasource.url=jdbc:postgresql://dpg-d525vlngi27c73b8j2c0-a.oregon-postgres.render.com:5432/db_80ns
-#spring.datasource.username=dbuser
-#spring.datasource.password=IHLwxDrO3pE8Amkg9v2CD1pVdCm01P21
-
-spring.datasource.url=jdbc:postgresql://db:5432/mydb
+spring.datasource.url=jdbc:postgresql://dpg-d525vlngi27c73b8j2c0-a.oregon-postgres.render.com:5432/db_80ns
 spring.datasource.username=dbuser
-spring.datasource.password=pass123
+spring.datasource.password=IHLwxDrO3pE8Amkg9v2CD1pVdCm01P21
+
+#spring.datasource.url=jdbc:postgresql://db:5432/mydb
+#spring.datasource.username=dbuser
+#spring.datasource.password=pass123
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -15,3 +15,6 @@ app.jwt.secret=MySuperSecretKeyForStreetFoodGoProject2025!MustBeVeryLong
 app.jwt.issuer=StreetFoodGoApp
 app.jwt.audience=StreetFoodGoUsers
 app.jwt.ttl-minutes=60
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
