--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=Street_Food_Go
 
 
-spring.datasource.url=jdbc:postgresql://db:5432/mydb
-spring.datasource.username=dbuser
-spring.datasource.password=pass123
+#spring.datasource.url=jdbc:postgresql://db:5432/mydb
+#spring.datasource.username=dbuser
+#spring.datasource.password=pass123
 
-#spring.datasource.url=jdbc:postgresql://dpg-d5n38qsoud1c739o8ceg-a.oregon-postgres.render.com:5432/mydb_y8a9
-#spring.datasource.username=mydb_y8a9_user
-#spring.datasource.password=vdcLgyI1yNMnyVKG3Ir0LjhxARm6h5uz
+spring.datasource.url=jdbc:postgresql://dpg-d5n38qsoud1c739o8ceg-a.oregon-postgres.render.com:5432/mydb_y8a9
+spring.datasource.username=mydb_y8a9_user
+spring.datasource.password=vdcLgyI1yNMnyVKG3Ir0LjhxARm6h5uz
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -19,3 +19,10 @@ app.jwt.ttl-minutes=60
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.mail.host=mail-hog
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smpt.auth=false
+spring.mail.properties.mail.smpt.starttls.enable=false
