--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=Street_Food_Go
 
 
-#spring.datasource.url=jdbc:postgresql://db:5432/mydb
-#spring.datasource.username=dbuser
-#spring.datasource.password=pass123
+spring.datasource.url=jdbc:postgresql://db:5432/mydb
+spring.datasource.username=dbuser
+spring.datasource.password=pass123
 
-spring.datasource.url=jdbc:postgresql://dpg-d5n38qsoud1c739o8ceg-a.oregon-postgres.render.com:5432/mydb_y8a9
-spring.datasource.username=mydb_y8a9_user
-spring.datasource.password=vdcLgyI1yNMnyVKG3Ir0LjhxARm6h5uz
+# render db
+#spring.datasource.url=jdbc:postgresql://dpg-d5n38qsoud1c739o8ceg-a.oregon-postgres.render.com:5432/mydb_y8a9
+#spring.datasource.username=mydb_y8a9_user
+#spring.datasource.password=vdcLgyI1yNMnyVKG3Ir0LjhxARm6h5uz
 
 
 spring.jpa.hibernate.ddl-auto=update
